I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> ./src/app
> Font file not found: Can't resolve './fonts/TorusVariations-VF.woff2'
>

--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -1,7 +1,7 @@
 /*
   This file previously defined @font-face rules.
   Font loading for 'Torus Variations' is now handled by next/font/local in src/app/layout.tsx.
-  If you have other custom fonts to load manually, you can define their @font-face rules here.
+  This file can be used for other custom fonts loaded manually via @font-face if needed.
 */
 
 /*
@@ -10,7 +10,7 @@
 
   @font-face {
     font-family: 'AnotherCustomFont';
-    src: url('/fonts/AnotherCustomFont-Regular.woff2') format('woff2');
+    src: url('/path/to/your/font/AnotherCustomFont-Regular.woff2') format('woff2'); // Adjust path
     font-weight: 400; // or 'normal'
     font-style: normal;
     font-display: swap;
@@ -18,7 +18,7 @@
 
   @font-face {
     font-family: 'AnotherCustomFont';
-    src: url('/fonts/AnotherCustomFont-Bold.woff2') format('woff2');
+    src: url('/path/to/your/font/AnotherCustomFont-Bold.woff2') format('woff2'); // Adjust path
     font-weight: 700; // or 'bold'
     font-style: normal;
     font-display: swap;
