I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> ./src/app
> Font file not found: Can't resolve './fonts/TorusVariations-VF.woff2'
>

--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -1,5 +1,5 @@
 /*
-  This file previously defined @font-face rules.
+  This file previously defined @font-face rules for TorusVariations.
   Font loading for 'Torus Variations' is now handled by next/font/local in src/app/layout.tsx.
   This file can be used for other custom fonts loaded manually via @font-face if needed.
 */
